<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="de.weissaufgrau.adelmann.mctq.DisplayMCTQ3Activity">

    <TextView
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_display_mctq3"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"/>


    <TextView
        android:id="@+id/MCTQ_block_3_tip_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:text="@string/MCTQ_block1_tip"/>

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/MCTQ_block_3_tip_id"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/MCTQ_block_3_q1_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MCTQ_block2_q1"/>

        <TextView
            android:id="@+id/MCTQ_block_3_a1_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/MCTQ_block_3_q1_id"
            android:text="@string/pick_time"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/MCTQ_block_3_a1_id"
            android:onClick="showTimePickerDialog"
            android:src="@drawable/circular116"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/MCTQ_block_3_q2_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MCTQ_block2_q2"/>

        <TextView
            android:id="@+id/MCTQ_block_3_a2_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/MCTQ_block_3_q2_id"
            android:text="@string/pick_time"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/MCTQ_block_3_a2_id"
            android:onClick="showTimePickerDialog2"
            android:src="@drawable/circular116"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line2"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/MCTQ_block_3_q3_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MCTQ_block2_q3"/>

        <TextView
            android:id="@+id/MCTQ_block_3_a3_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/MCTQ_block_3_q3_id"
            android:text="@string/pick_minutes"/>

        <ImageButton
            android:id="@+id/MCTQ_b3_a3_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/MCTQ_block_3_a1_id"
            android:onClick="showNumberPickerDialog1"
            android:src="@drawable/number19"/>

        <TextView
            android:id="@+id/MCTQ_block_3_a3_suffix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/MCTQ_block_3_a3_id"
            android:text="@string/MCTQ_minn"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line3"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/line4_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/MCTQ_block_3_q4_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MCTQ_block2_q4"/>

            <TextView
                android:id="@+id/MCTQ_block_3_a4_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/MCTQ_block_3_q4_id"
                android:text="@string/pick_time"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/MCTQ_block_3_a1_id"
                android:onClick="showTimePickerDialog3"
                android:src="@drawable/circular116"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/line4_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/MCTQ_block_3_radiogroup_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/MCTQ_mit_Wecker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="odWithAlarm"
                    android:text="@string/MCTQ_block2_q5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <RadioButton
                    android:id="@+id/MCTQ_ohne_Wecker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="odWithoutAlarm"
                    android:text="@string/MCTQ_block2_q6"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line4"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/MCTQ_block_3_q7_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MCTQ_block2_q7"/>

        <TextView
            android:id="@+id/MCTQ_block_3_a7_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/MCTQ_block_3_q7_id"
            android:text="@string/pick_minutes"/>

        <ImageButton
            android:id="@+id/MCTQ_b3_a7_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/MCTQ_block_3_a7_id"
            android:onClick="showNumberPickerDialog2"
            android:src="@drawable/number19"/>

        <TextView
            android:id="@+id/MCTQ_block_3_a7_suffix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/MCTQ_block_3_a7_id"
            android:text="@string/MCTQ_minn"/>
    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="showMCTQ2"
        android:text="@string/MCTQ_weiter"/>
</RelativeLayout>
