<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="de.weissaufgrau.adelmann.mctq.DisplayMCTQ4Activity">

    <TextView
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_display_mctq4"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"/>

    <Button
        android:id="@+id/MCTQ_button_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="showMCTQ5"
        android:text="@string/MCTQ_fertig"/>

    <EditText
        android:id="@+id/MCTQ_block_4_a1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/MCTQ_button_done"
        android:layout_below="@+id/header"
        android:hint="@string/MCTQ_block4_q1"/>

</RelativeLayout>
